--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,64 @@
   .username {
     font-size: 18px; /* Adjust font size as needed */
   }
+
+  .analysis-inner-div {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    margin-left: 30px;
+  }
+
+  /* Amazing CSS for React Card Component */
+.activity-card-individual {
+  position: relative;
+  flex-basis: calc(40% - 10px); 
+  width: 300px;
+  height: 400px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  margin: 20px;
+}
+
+.activity-card-individual:hover {
+  transform: scale(1.05);
+}
+
+.activity-img {
+  width: 100%;
+  height: 60%;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.activity-text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #333;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.activity-button {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.activity-button:hover {
+  background-color: #45a049;
+}
